css/main.css
/* pt-sans-regular - cyrillic_latin */
/* https://google-webfonts-helper.herokuapp.com/fonts/pt-sans?subsets=latin,cyrillic */
@font-face {
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/pt-sans-v9-cyrillic_latin-regular.eot'); /* IE9 Compat Modes */
  src: local('PT Sans'), local('PTSans-Regular'),
       url('../fonts/pt-sans-v9-cyrillic_latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/pt-sans-v9-cyrillic_latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/pt-sans-v9-cyrillic_latin-regular.woff') format('woff'), /* Modern Browsers */
       url('../fonts/pt-sans-v9-cyrillic_latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/pt-sans-v9-cyrillic_latin-regular.svg#PTSans') format('svg'); /* Legacy iOS */
}

body {
	background-color: #D3D3D3;
	min-width: 1175px;
	max-width: 1175px;
	margin: 0 auto;
	font-family: 'PT Sans', sans-serif;
	font-size: 16px;
}

@-moz-document url-prefix() {
    body {font-size: 15px;}
}

.header img {
	width: 1180px;
}

.main {
	margin-top: 15px;
}

.content {
	width: 880px;
	float: left;
	background-color: #D3D3D3;
}

.contentmenu {
	font-size: 15.6px;
	height: 50px;
	background-color: #d3d3d3;
	text-align: center;
}

.news-block {
	overflow: auto;
	word-wrap: break-word;
	margin-top: 15px;
	background-color: #fff;
	padding: 10px 20px;	
}

.supertest {
	width: 380px;
	float: left;
}

.news-body {
	margin-top: 10px;
}

.side {
	width: 280px;
	min-height: 1580px;
	float: right;
	background-color: #383838;
}

.torrent-block {
	width: 280px;
	background-color: #383838;
}

.footer {
	bottom: 0;
	margin-top: 15px;
	background-color: #383838;
	width: 1175px;
	height: 100px;
}

.footer_left {
	width: 340px;
	color: #ddd;
	float: left;
}

.footer_left2 {
	padding: 15px 0 0 10px;
}

.footer_left2 img {
	margin: 2px;
}

.footer_center {
	width: 350px;
	float: left;
	height: 100px;
	background: url(/img/footer.png);
	background-position: center top;
	background-repeat: no-repeat;
}

.chat {
	width: 0px;
	margin: 25px 0 0 160px;
}

.chat-link {
	height: 54px;
	width: 144px;
	display: block;
	background: url(/img/chat1.png);
}

.chat-link:hover {
	background: url("/img/chat2.png");
}

.pagination>.active>a,
.pagination>.active>a:focus,
.pagination>.active>a:hover,
.pagination>.active>span,
.pagination>.active>span:focus,
.pagination>.active>span:hover {
	background-color: #383838;
	border-color: #282829;
}

.footer_right {
	font-size: 17.8px;
	width: 485px;
	float: left;
	color: #ddd;
}

.form-control {
	font-size: 14px;
}

.footer_right ul {
    padding: 15px 0 0 10px;
}

.footer_right ul li {
	display: inline;
}

.footer_right li:not(:first-child):before {
	content: " | ";
}

.footer_right p {
	font-size: 10.3px;
	padding: 7px 0 0 10px;
}

.footer a {
	color: #ddd;
}

.clear {
	clear: both;
}

.center {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.btn-success {
	color: #fff;
	background-color: #383838;
	border-color: #d3d3d3;
}

.btn-success:hover,
.btn-success:active,
.btn-success:visited,
.btn-success:focus {
	background-color: #282829;
	border-color: #d3d3d3;
}

.btn-success.active.focus,
.btn-success.active:focus,
.btn-success.active:hover,
.btn-success:active.focus,
.btn-success:active:focus,
.btn-success:active:hover,
.open>.dropdown-toggle.btn-success.focus,
.open>.dropdown-toggle.btn-success:focus,
.open>.dropdown-toggle.btn-success:hover {
	background-color: #282829;
	border-color: #d3d3d3;
}

.form-control:focus {
	border-color: #d3d3d3;
	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #d3d3d3;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
	transition: background-color 5000s ease-in-out 0s;
}

hr {
	margin-top: 10px;
	margin-bottom: 10px;
	border: 0;
	border-top: 2px solid #d3d3d3;
}

.modal-open {
	padding-right: 0px !important;
}

.jcrop-keymgr {
	display: none !important;
}

ul.main-navigation {
	padding: 0;
	margin: 0;
}

ul.main-navigation li {
	display: block;
	position: relative;
	float: left;
}

ul.main-navigation a {
	display: block;
	text-decoration: none;
	color: #fff;
	height: 50px;
	padding: 14px;
	font-size: 12.2pt;
}

a#activelink0 {
	background-color: #b32121;
	width: 100px;
}

a#activelink1 {
	background-color: #a01e1e;
	width: 95px;
}

a#activelink2 {
	background-color: #881919;
	width: 130px;
}

a#activelink3 {
	background-color: #731515;
	width: 145px;
}

a#activelink4 {
	background-color: #641212;
	width: 110px;
}

a#activelink5 {
	background-color: #560f0f;
	width: 100px;
}

a#activelink6 {
	background-color: #460c0c;
	width: 200px;
}

a#activelink0:hover,
a#activelink1:hover,
a#activelink2:hover,
a#activelink3:hover,
a#activelink4:hover,
a#activelink5:hover,
a#activelink6:hover {
	background-color: #cf2525;
}

.profile-edit {
	padding-top: 10px;
	float: right;
	height: 240px;
	width: 16px;
}

div.news-header {
	top: 0px;
	padding: 0px 0px 10px 0px;
}

h2.news-name {
	line-height: 30px;
	margin: 0px;
	color: #504141;
	font-size: 19pt;
	font-weight: 400;
}

h2.news-name a,
h2.news-name a:visited {
	text-decoration: none;
	outline: none;
	color: #504141;
}

.chitat-eshe {
	margin: 0 auto;
	height: 10px;
	display: block;
	width: 140px;
	padding-top: 25px;
}

a.chitat-dalee,
a.chitat-dalee:visited {
	margin: 0px;
	padding: 5px 10px;
	display: inline-block;
	text-decoration: none;
	float: left;
	outline: none;
	border: 1px solid #e74c3c;
	cursor: pointer;
	color: #e74c3c;
	background-color: #fff;
	font-size: 11pt;
	opacity: 0.9;
}

a.chitat-dalee:hover {
	opacity: 1;
	color: #fff;
	background-color: #e74c3c;
}

div.news_footer {
	margin-top: 10px;
	margin-bottom: 10px;
	color: #000;
	font-size: 10pt;
	font-weight: 400;
	width: 100%;
	height: 32px;
	position: relative;
	bottom: 0px;
}

.published,
.published a {
	margin: 0px;
	padding: 0px;
	color: #9d9d9d;
	font-size: 11pt;
	font-style: italic;
	text-decoration: none;
}

.published a:hover {
	text-decoration: underline;
	color: #f04646;
}

.news_footer_right {
	float: right;
}

span.other-info {
	margin: 0px 0px 0px 5px;
	font-style: italic;
	font-size: 16px;
	line-height: 30px;
	color: #e74c3c;
}

div.torrent_block {
	position: relative;
	width: 260px;
	height: auto;
	padding-bottom: 10px;
	background-color: #282829;
	margin: 10px 10px 10px 10px;
	font-family: 'PT Sans', sans-serif;
}

div.torrent_block:hover {
	background-color: #d83541;
}

img.lasttorpic {
	margin: 10px 10px 0px 10px;
}

p.lasttortext {
	margin: 0px 10px 0px 10px;
	padding: 5px;
	text-align: center;
	color: #fff;
	font-weight: 400;
	font-size: 11pt;
}

.side-anime-desc {
	position: absolute;
	display: none;
	top: 0;
	left: 0;
	height: calc(100% - 20px);
	width: calc(100% - 20px);
	margin: 10px;
	background-color: rgba(0,0,0,0.8);
	color: #fff;
	text-align: center;
	padding: 10px;
	overflow: hidden;
	z-index: 51;
	cursor: pointer;
}

.last_tor_button {
	display: inline-block;
	background: #d83541;
	text-decoration: none;
	outline: none;
	padding: 5px 10px;
	color: #fff;
	font-size: 10pt;
	z-index: 53;
}
.last_tor_button:hover {
	color: #fff;
	background: #b32121;
	text-decoration: none;
}

.torrent_block:hover .side-anime-desc {
	display: block;
}

.side-anime-desc > span {
	display: block;
}

.side-runame {
	font-size: 13pt;
	line-height: 13pt;
	margin-bottom: 5px;
	font-weight: bold;
}

.side-series {
	font-size: 13pt;
	margin-bottom: 50px;
}

.side-description {
	font-size: 12pt;
	margin-bottom: 10px;
}

.profile-info-left-side {
	float: left;
	width: 200px;
	text-align: center;
}

.profile-left-block-wrapper {
	padding: 10px 25px;
}

.profile-nickname {
	display: block;
	margin-bottom: 10px;
	padding: 0;
	font-size: 13pt;
	line-height: 14pt;
	text-align: center;
}

.profile-avatar-wrapper {
	overflow: hidden;
	width: 150px;
	height: 150px;
	-webkit-border-radius: 100%;
	-moz-border-radius: 100%;
	border-radius: 100%;
}

.profile-line {
	float: left;
	height: 265px;
	border-left: 2px solid #383838;
}

.user-status {
	display: block;
	padding-top: 7px;
}

.profile-info-right-side {
	float: left;
	padding: 8px 20px 0 20px;
}

.profile-right-block-content {
	display: block;
	float: left;
	width: 270px;
}

.profile-right-block-content p {
	display: block;
	margin: 2px 0;
}

.profile-content-title {
	font-size: 14pt;
	color: #b82525;
	font-weight: bold;
	margin: 0;
}

.detail_torrent_side {
	float: left;
	margin-left: 12px;
}

.detail_pic_corner {
	background-color: #d3d3d3;
	padding: 4px;
}

.detail_torrent_info {
	float: left;
	width: 470px;
	height: 508px;
	overflow: hidden;
}

#nextserial {
	position: absolute;
	font-family: 'BebasBold', sans-serif;
	color: #fff;
	text-align: center;
	font-size: 15px;
	background: rgba(0, 0, 0, .5);
	width: 358px;
	padding-top: 5px;
	padding-bottom: 5px;
}

.download-torrent {
	margin-top: 10px;
	background-color: #e0e0e0;
	height: 100%;
	width: 100%;
	float: left;
	text-align: center;
	font-size: 15px;
}

.torrentcol1 {
	width: 240px;
}

.torrentcol2 {
	width: 260px;
}

.torrentcol3 {
	width: 200px;
}

.torrentcol4 {
	width: 140px;
}

.download-torrent table {
	border-collapse: collapse;
}

.download-torrent tr {
	border: none;
	height: 30px;
}

.download-torrent td {
	border-right: solid 2px #d3d3d3;
}

.download-torrent td:last-child {
	border-right: none;
}

.xplayer {
	height: 530px;
	display: none;
}

.release-title {
	color: #d83541;
	text-align: center;
	font-size: 16px;
	margin-top: 0px;
	font-weight: 500;
}

.tab-switcher {
	margin-top: 10px;
	padding: 10px 10px;
	background-image: linear-gradient(#282829, #282829, #000);
	color: #fff;
	text-transform: uppercase;
	position: relative;
	width: 100%;
	height: 48px;
}

.tab-switcher button.active {
	background: #4d4d4d;
}

.tab-switcher button {
	color: #fff;
	background: transparent;
	border: none;
	font-size: 14px;
	padding: 5px 10px;
	text-transform: uppercase;
	float: left;
	border-radius: 3px;
}

.tab-switcher button:focus {
	outline: 0;
}

.tab-switcher button.presence_online {
	background: #2d9c64;
	float: right;
	display: none;
}

.light-off {
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.8);
	position: fixed;
	left: 0;
	top: 0;
	z-index: 998;
	display: none;
	opacity: 0;
}

.z-fix {
	position: relative;
	z-index: 999;
}

button.xdark {
	background: transparent;
}

.tableCenter {
	text-align: center;
}

.smallSearch {
	z-index: 1000;
	width: 260px;
	margin-left: 10px;
	color: #ddd;
	background-color: #383838;
	position: absolute;
	display: none;
}

.smallSearch a {
	color: #ddd;
	text-decoration: none;
	font-size: 16px;
}

.inner-addon {
	position: relative;
}

.inner-addon .glyphicon {
	position: absolute;
	padding: 7px;
	pointer-events: none;
}

.left-addon .glyphicon {
	left: 0px;
}

.right-addon .glyphicon {
	right: 0px;
}

.left-addon input {
	padding-left: 30px;
}

.right-addon input {
	padding-right: 30px;
}

div#headercontent {
	position: absolute;
	width: 1175px;
	height: 120px;
	margin: 0px auto;
	z-index: 1000;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
}

button.favorites {
	background: #2a5885;
}

.form-control {
	font-size: 15px !important;
}

.btn {
	font-size: 15px !important;
}

